...
            <objects>
                <viewController storyboardIdentifier="LoginVC" id="BYZ-38-t0r" customClass="ViewController" customModule="UseCaseSprint" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="amreen@mail.com" borderStyle="roundedRect" placeholder="Email ID" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="bwF-bc-Dmz">
                                <rect key="frame" x="30" y="158" width="354" height="34"/>
                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                <textInputTraits key="textInputTraits" keyboardType="emailAddress"/>
                                <variation key="heightClass=regular-widthClass=regular">
                                    <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                </variation>
...
                                    </constraint>
                                    <constraint firstAttribute="width" constant="100" id="sDt-RG-k8X">
                                        <variation key="heightClass=regular-widthClass=regular" constant="200"/>
                                    </constraint>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="filled" title="Login"/>
                                <connections>
                                    <action selector="loginButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="6f8-36-WC6"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uiP-Uy-sgR">
                                <rect key="frame" x="107" y="377" width="200" height="31"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="200" id="UAd-N4-pRE"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="forgot password"/>
                                <connections>
                                    <action selector="forgotPasswordClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Gpd-Fc-uAZ"/>
                                </connections>
                            </button>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
...
                    <navigationItem key="navigationItem" id="4DY-dD-rMQ">
                        <barButtonItem key="rightBarButtonItem" style="plain" id="dcZ-aH-TXt">
                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="IVS-tW-9N8">
                                <rect key="frame" x="302" y="5" width="92" height="34.5"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="SignUp"/>
                                <connections>
                                    <action selector="signUpButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="7Pg-Yq-1a4"/>
                                </connections>
                            </button>
                        </barButtonItem>
                    </navigationItem>
...
                                    </constraint>
                                    <constraint firstAttribute="width" constant="100" id="n0H-h9-OTA">
                                        <variation key="heightClass=regular-widthClass=regular" constant="150"/>
                                    </constraint>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="filled" title="Sign Up"/>
                                <connections>
                                    <action selector="signUpButtonClicked:" destination="5Yb-0u-Pb4" eventType="touchUpInside" id="6lK-UF-vFX"/>
                                </connections>
                            </button>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="poW-sV-ihK"/>
...
